samples/_failures_safe/1761158473_81b90a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3717c73e.c: In function ‘main’:
./samples/SAFE/__tmp_3717c73e.c:127:16: error: missing terminating " character
  127 |         printf("... and %
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_3717c73e.c:127:9: error: expected expression at end of input
  127 |         printf("... and %
      |         ^~~~~~
./samples/SAFE/__tmp_3717c73e.c:127:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3717c73e.c:127:9: error: expected declaration or statement at end of input
